add shadowJar